--- a/index.html
+++ b/index.html
@@ -1,116 +1,102 @@
-<!DOCTYPE HTML>
-<!--
-	Lens by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>Rai Creation</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-loading-0 is-loading-1 is-loading-2">
+<head>
+   <meta charset="utf-8">
+   <meta http-equiv="X-UA_Compatible" content="IE=edge">
+   <meta name="vieport" content="width=device-width , initial-scale=1">
+   <title>SK</title>
+   <link href='https://fonts.googleapis.com/css?family=Lato:100' rel='stylesheet' type='text/css'>
+   <link rel="stylesheet" href="css/bootstrap.min.css">
+   <link rel="stylesheet" type="text/css" href="css/mainp.css">
+  <link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
+   <script src="js/jquery-2.2.2.js"></script>
+   <script src="js/bootstrap.min.js"></script>
 
-		<!-- Main -->
-			<div id="main">
+</head>
+<body style="background-color: aliceblue;"">
+<div class="container">
+    <div class=" row">
+        <div class="col-md-6">
+            <img class="logo img-responsive" src="images/logo.png">
+        </div>
+        <div class="col-md-6 text-right ">
+            <h2 class="ofont"><b>Sandeep Kumar Choudhary</b></h2>
+            <h4 class="ofont">Front-End Ninja</h4>
+        </div>
+        </div>
 
-				<!-- Header -->
-					<header id="header">
-						<h1>Rai Creation</h1>
-						<p>Cover Designer<a href="#">Rai Creation</a></p>
-						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-						</ul>
-					</header>
+        <div class="row backcolor">
+        <div class="col-md-12">
+        <img class=" main-image img-responsive " src="images/main.jpg" >
+        </div>
+        </div>
 
-				<!-- Thumbnail -->
-					<section id="thumbnails">
-						<article>
-							<a class="thumbnail" href="images/fulls/01.jpg" data-position="left center"><img src="images/thumbs/01.jpg" alt="" /></a>
-							<h2>Cover Design</h2>
-							<p>------------------</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/02.jpg"><img src="images/thumbs/02.jpg" alt="" /></a>
-							<h2>Cover Design</h2>
-							<p>------------------</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/03.jpg" data-position="top center"><img src="images/thumbs/03.jpg" alt="" /></a>
-							<h2>Cover Design</h2>
-							<p>------------------</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/04.jpg"><img src="images/thumbs/04.jpg" alt="" /></a>
-							<h2>Cover Design</h2>
-							<p>------------------</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/05.jpg" data-position="top center"><img src="images/thumbs/05.jpg" alt="" /></a>
-							<h2>Cover Design</h2>
-							<p>------------------</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/06.jpg"><img src="images/thumbs/06.jpg" alt="" /></a>
-							<h2>Cover Design</h2>
-							<p>------------------</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/07.jpg"><img src="images/thumbs/07.jpg" alt="" /></a>
-							<h2>Proin quis mauris</h2>
-							<h2>Cover Design</h2>
-							<p>------------------</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/08.jpg"><img src="images/thumbs/08.jpg" alt="" /></a>
-							<h2>Cover Design</h2>
-							<p>------------------</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/09.jpg"><img src="images/thumbs/09.jpg" alt="" /></a>
-							<h2>Cover Design</h2>
-							<p>------------------</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/10.jpg"><img src="images/thumbs/10.jpg" alt="" /></a>
-							<h2>Cover Design</h2>
-							<p>------------------</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/11.jpg"><img src="images/thumbs/11.jpg" alt="" /></a>
-							<h2>Cover Design</h2>
-							<p>------------------</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/12.jpg"><img src="images/thumbs/12.jpg" alt="" /></a>
-							<h2>Cover Design</h2>
-							<p>------------------</p>
-						</article>
-					</section>
+        <div class="row backcolor">
+            <div class="col-md-12">
+                <h3 class="ofont">Featured Work</h3>
+            </div>
+        </div>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="copyright">
-							<li>&copy; 2016</li><li>Design: <a href="http://github.com/Skchoudhary">Sandep Choudahry</a>.</li>
-						</ul>
-					</footer>
+        <div class="row backcolor">
+            <div class="col-md-6 imagef">
+                <img  class="imagef img-responsive"data-toggle="modal" data-target="#myModal" src="images/mysky.png">
+                <a href="https://github.com/Skchoudhary"><h3>My Sky</h3></a>
+            </div>
+            <div class="col-md-6 imagef">
+                <img class=" imagef " src="images/file.png" data-toggle="modal" data-target="#myFile">
+                <a href="https://github.com/Skchoudhary"><h3>File Handling</h3></a>
+            </div>
+        </div>
+    </div>
+</div>
 
-			</div>
+<!-- Modal  File Handling-->
+<div class="modal fade" id="myFile" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title" id="myModalLabel">File Handling</h4>
+      </div>
+      <div class="modal-body">
+      <img  class="imagef img-responsive "src="images/file.png">
+        <p>A file handling project built in C++ with stream libraies to manage files.</p>
+         <h3>Teamates for the project</h3>
+         <ul>
+             <li>Sajal Verma</li>
+             <li>Rishab Jaitely</li>
+         </ul>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Modal  My Sky-->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title" id="myModalLabel">My Sky</h4>
+      </div>
+      <div class="modal-body">
+      <img class="imagef img-responsive "src="images/mysky.png">
+    <p>A video chat software that allow friends to communicate with each other in more friendly way.</p>
+         <h3>Teamates for the project</h3>
+         <ul>
+             <li>Ritika Sharma</li>
+             <li>Parul Mahajan</li>
+         </ul>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 
-	</body>
+
+
+</body>
 </html>
