--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 </head>
 <body>
-<!-- Intro Content-->
-<div class="wel-page row">
-    <div class="text col-md-12">
-        <h4 style="font-size: 59px;">Hello, World.</h4>
-        <h1 style="font-size: 64px;">I'm Sandeep Choudhary</h1>
-    </div>
-    <div class="center row">
-    <p class="day ">
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-12 text center">
+        <h1 style="font-size: 59px">Hello World !</h1>
+        <h4 style="font-size: 69px">I'm Sandeep Choudhary</h4>
+        </div>
+        <div class="center col-md-12">
+        <p class="day ">
             <span>
                 Eat
             </span>
@@ -35,25 +35,37 @@
             <span>
                 Sleep
             </span>
-    </p>
+        </p>
+        </div>
+        <div class="center col-md-12" id="menu">
+        <ul>
+            <li><a target="_blank" href="https://sandeepchoudharyme.wordpress.com/"><i class="fa fa-rss" aria-hidden="true"></i></a>
+            </li>
+            <li><a target="_blank" href="https://github.com/Skchoudhary"><i class="fa fa-github" aria-hidden="true"></i></a>
+            </li>
+            <li><a target="_blank" href="https://in.linkedin.com/in/skchoudhary15"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+            </li>
+            <li><a target="_blank" href="https://www.facebook.com/SandeepChoudhary1507"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+            </li>
+        </ul>
+        </div>
+    </div>
+    <br>
+    <br>
+    <hr>
+    <br>
+    <br>
+    <div class="row">
+        <div class="col-md-6">
+            <img src="Images/me.jpg" class="image">
+        </div>
+        <div class="col-md-6">
+            <p class="intro">
+                Hi
+                My name is Sandeep Kumar Choudhary, right now i am pursuing Bacholer of Technology in Computer Science Engineering from Amritsar College of Enginering and Technology and in 7th Sem right now.
+            </p>
+        </div>
     </div>
 </div>
-<!-- Links to web presence -->
-<div class="social-link row">
-<ul class="links col-md-12">
-    <li><a target="_blank" href="https://sandeepchoudharyme.wordpress.com/"><i class="fa fa-rss" aria-hidden="true"></i></a>
-    </li>
-    <li><a target="_blank" href="https://github.com/Skchoudhary"><i class="fa fa-github" aria-hidden="true"></i></a>
-    </li>
-    <li><a target="_blank" href="https://in.linkedin.com/in/skchoudhary15"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
-    </li>
-    <li><a target="_blank" href="https://www.facebook.com/SandeepChoudhary1507"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
-    </li>
-</ul>
-</div>
-
-<div class="project">
-</div>
-
 </body>
 </html>
