About me completed

--- a/index.html
+++ b/index.html
@@ -52,19 +52,28 @@
     </div>
     <br>
     <br>
-    <hr>
+    <hr class="star-bright">
     <br>
     <br>
-    <div class="row">
+    <div class="row" id="intro">
         <div class="col-md-6">
             <img src="Images/me.jpg" class="image">
         </div>
         <div class="col-md-6">
             <p class="intro">
-                Hi
+                Hi,
+                <br>
                 My name is Sandeep Kumar Choudhary, right now i am pursuing Bacholer of Technology in Computer Science Engineering from Amritsar College of Enginering and Technology and in 7th Sem right now.
             </p>
         </div>
+    </div>
+    <br>
+    <br>
+    <hr class="star-bright">
+    <br>
+    <br>
+    <div class="portfolio row">
+
     </div>
 </div>
 </body>
