--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="row" >
     <br>
         <div class=" center col-md-12">
-            <img src="Images/me.jpg" class="image">
+            <img src="images/me.jpg" class="image">
             <p class="text_intro" >Sandeep Choudhary</p>
             <p class="day ">
             <span>
