--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="row" >
     <br>
         <div class=" center col-md-12">
-            <img src="images/me.jpg" class="image">
+            <img src="Images/me.jpg" class="image">
             <p class="text_intro" >Sandeep Choudhary</p>
             <p class="day ">
             <span>
@@ -106,11 +106,11 @@
     <br>
     <div class="row backcolor">
         <div class="col-md-6 imagef">
-            <img  class="imagef img-responsive img_br" data-toggle="modal" data-target="#myModal" src="images/mysky.png">
+            <img  class="imagef img-responsive img_br" data-toggle="modal" data-target="#myModal" src="Images/mysky.png">
             <a href="https://github.com/Skchoudhary/MySky"><h3>My Sky</h3></a>
         </div>
         <div class="col-md-6 imagef">
-            <img class=" imagef img-responsive img_br" src="images/file.png" data-toggle="modal" data-target="#myFile">
+            <img class=" imagef img-responsive img_br" src="Images/file.png" data-toggle="modal" data-target="#myFile">
             <a href="https://github.com/Skchoudhary/FileHandling"><h3>File Handling</h3></a>
         </div>
     </div>
@@ -120,22 +120,22 @@
     <br>
     <div class="row backcolor">
         <div class="col-md-6 imagef">
-            <img  class="imagef img-responsive img_br" data-toggle="modal" data-target="#mysecretar" src="images/secretar.jpg">
+            <img  class="imagef img-responsive img_br" data-toggle="modal" data-target="#mysecretar" src="Images/secretar.jpg">
             <a href="https://github.com/Skchoudhary/Secretar"><h3>Secretar</h3></a>
         </div>
         <div class="col-md-6 imagef">
-            <img class=" imagef img-responsive img_br" src="images/feedback.jpg" data-toggle="modal" data-target="#myForm">
+            <img class=" imagef img-responsive img_br" src="Images/feedback.jpg" data-toggle="modal" data-target="#myForm">
             <a href="https://github.com/Skchoudhary/Teacher-Evaluation"><h3>FeedBack Form</h3></a>
         </div>
     </div>
     <br><br><br><br>
     <div class="row backcolor">
         <div class="col-md-6 imagef">
-            <img  class="imagef img-responsive img_br" data-toggle="modal" data-target="#mymeetup" src="images/Capture.JPG">
+            <img  class="imagef img-responsive img_br" data-toggle="modal" data-target="#mymeetup" src="Images/Capture.JPG">
             <a href="https://meetup-1329.appspot.com/#/"><h3>Conference Central</h3></a>
         </div>
         <div class="col-md-6 imagef">
-            <img class=" imagef img-responsive img_br" src="images/portfolio.JPG" data-toggle="modal" data-target="#myport">
+            <img class=" imagef img-responsive img_br" src="Images/portfolio.JPG" data-toggle="modal" data-target="#myport">
             <a href="https://skchoudhary.github.io/"><h3>Portfolio</h3></a>
         </div>
     </div>
@@ -164,7 +164,7 @@
         <h4 class="modal-title" id="myModalLabel">File Handling</h4>
       </div>
       <div class="modal-body">
-      <img  class="imagef img-responsive "src="images/file.png">
+      <img  class="imagef img-responsive "src="Images/file.png">
         <p>A file handling project built in C++ with stream libraies to manage files.</p>
          <h3>Teamates for the project</h3>
          <ul>
@@ -186,7 +186,7 @@
         <h4 class="modal-title" id="myModalLabel">My Sky</h4>
       </div>
       <div class="modal-body">
-      <img class="imagef img-responsive "src="images/mysky.png">
+      <img class="imagef img-responsive "src="Images/mysky.png">
     <p>A video chat software that allow friends to communicate with each other in more friendly way.</p>
          <h3>Teamates for the project</h3>
          <ul>
@@ -209,7 +209,7 @@
         <h4 class="modal-title" id="myModalLabel">Secretar</h4>
       </div>
       <div class="modal-body">
-      <img class="imagef img-responsive "src="images/secretar.jpg">
+      <img class="imagef img-responsive "src="Images/secretar.jpg">
     <p>Time management application whose ultimate goal is to increase your efficiency of your work. It based on Pomodoro Technique and other research work which ultimate help person it increase it's efficiency.</p>
          <h3>Teamates for the project</h3>
          <ul>
@@ -233,7 +233,7 @@
         <h4 class="modal-title" id="myModalLabel"><a href="https://github.com/Skchoudhary/Teacher-Evaluation"> Feedback Form </a></h4>
       </div>
       <div class="modal-body">
-      <img class="imagef img-responsive "src="images/feedback.jpg">
+      <img class="imagef img-responsive "src="Images/feedback.jpg">
     <p>Teacher Evaluation system helps College or School management. To get student feedback on faculty that teaches them, which further help teacher to increase their teaching style with changing technology. .</p>
          <h3>Teamates for the project</h3>
          <ul>
@@ -255,7 +255,7 @@
         <h4 class="modal-title" id="myModalLabel"> Conference Central </h4>
       </div>
       <div class="modal-body">
-      <img class="imagef img-responsive "src="images/Capture.JPG">
+      <img class="imagef img-responsive "src="Images/Capture.JPG">
     <p>This allow you to mange your Conference and help you to see other Conference happening around you and to register with them.</p>
       </div>
       <div class="modal-footer">
@@ -272,7 +272,7 @@
         <h4 class="modal-title" id="myModalLabel"> Portfolio </h4>
       </div>
       <div class="modal-body">
-      <img class="imagef img-responsive "src="images/portfolio.jpg">
+      <img class="imagef img-responsive "src="Images/portfolio.jpg">
     <p>This is my personal website to showcase my work.</p>
       </div>
       <div class="modal-footer">
