Jekyll blog setup

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <div class="center col-md-12" id="menu">
         <ul>
-            <li><a target="_blank" href="https://sandeepchoudharyme.wordpress.com/"><i class="fa fa-rss" aria-hidden="true"></i></a>
+            <li><a target="_blank" href="https://github.com/Skchoudhary/gayan/"><i class="fa fa-rss" aria-hidden="true"></i></a>
             </li>
             <li><a target="_blank" href="https://github.com/Skchoudhary"><i class="fa fa-github" aria-hidden="true"></i></a>
             </li>
@@ -142,7 +142,7 @@
     <br><br><br><br><br><br>
         <div class="nav_bt" >
         <ul>
-            <li><a target="_blank" href="https://sandeepchoudharyme.wordpress.com/"><i class="fa fa-rss" aria-hidden="true"></i></a>
+            <li><a target="_blank" href="https://github.com/Skchoudhary/gayan/"><i class="fa fa-rss" aria-hidden="true"></i></a>
             </li>
             <li><a target="_blank" href="https://github.com/Skchoudhary"><i class="fa fa-github" aria-hidden="true"></i></a>
             </li>
