Jekyll blog integration

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <div class="center col-md-12" id="menu">
         <ul>
-            <li><a target="_blank" href="https://github.com/Skchoudhary/gayan/"><i class="fa fa-rss" aria-hidden="true"></i></a>
+            <li><a target="_blank" href="/gayan/"><i class="fa fa-rss" aria-hidden="true"></i></a>
             </li>
             <li><a target="_blank" href="https://github.com/Skchoudhary"><i class="fa fa-github" aria-hidden="true"></i></a>
             </li>
