--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 
   <link type="application/atom+xml" rel="alternate" href="https://blogs.dgplug.org/sandeepk/feed/" title="sandeepk">
 
-  <link rel="shortcut icon" type="image/x-icon" href="/favicon.png">
-  <link rel="stylesheet" href="/assets/css/main.css">
+  <link rel="shortcut icon" type="image/x-icon" href="assets/images/fab.png">
+  <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
 <body a="light">
