email address  to test format

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <ul>
         <li>me</li>
         <ul>
-          <li><a href="mailto:sandeepchoudhary1507@gmail.com">email</a></li>
+          <li>E-mail: sandeepchoudhary1507 at gmail dot com</li>
           <li>keep in touch: <a href="https://twitter.com/sandeepk__" target="_blank">twitter</a>, <a href="irc://irc.freenode.net/sandeepk,isnick" target="_blank">freenode</a>, <a href="https://blogs.dgplug.org/sandeepk/feed/" target="_blank">rss feed</a></li>
         </ul>
         <li>Work</li>
@@ -247,10 +247,6 @@
       body~div:not(#gdx-bubble-host) {
         position: absolute !important;
         z-index: 100000 !important
-      }
-
-      body[data-shop-url="https://www.honeybum.com"] header>.header {
-        z-index: 99999
       }
 
       .mm-slideout {
