add project showcase page

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
         <ul>
           <li><a href="https://blogs.dgplug.org/sandeepk" target="_blank">blog</a></li>
           <li><a href="https://github.com/skchoudhary/" target="_blank">github</a></li>
+          <li><a href="project.html" target="_blank"> Projects</a></li>
         </ul>
         <li>Personal</li>
         <ul>
