--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
         <h1>sandeepk</h1>
       </header>
       <p>I come from a city in India, Amritsar, moved to Mumbai after graduating from Amritsar College of Engineering and
-      Technology. I work as Software Engineer in a startup FCB Technologies where I work across Frontend, Backend, and DevOps.
-      In my non-work mode, I enjoy trek, doodling, <a href="reading-list.html">reading books</a>, and nowadays learning Ukulele.</p>
+      Technology. I work as Software Engineer II at FCB Technologies where I work across Frontend, Backend, and DevOps.
+      In my non-work mode, I enjoy doing trek, doodling, <a href="reading-list.html">reading books</a>, and nowadays learning Ukulele.</p>
       <ul>
         <li>me</li>
         <ul>
