--- a/reading-list-technical.html
+++ b/reading-list-technical.html
@@ -82,6 +82,8 @@
       </header>
       <h2 id="2021">2021</h2>
       <ul>
+        <li>Shape Up: Stop Running in Circles and Ship Work that Matters by Basecamp</li>
+        <li>Getting Real by Basecamp</li>
         <li>OReilly-Web-Application-Security-NGINX</li>
         <li>The Majesty of Vue.js by Alex Kyriakidis, Kostas Maniatis</li>
         <li>Getting Started with OAuth 2.0 by Ryan Boyd</li>
