--- a/reading-list.html
+++ b/reading-list.html
@@ -83,6 +83,7 @@
       <p>For technical book check <a href="reading-list-technical.html">here</a></p>
       <h2 id="2021">2021</h2>
       <ul>
+        <li>Stillness is the key by Ryan Holiday</li>
         <li>The Total Money Makeover by Dave Ramsey</li>
         <li>Deep Work by Carl Newport</li>
         <li>How to live on 24 hours a day by Bennett Arnold</li>
