update 2021 reading list

--- a/reading-list-technical.html
+++ b/reading-list-technical.html
@@ -1,32 +1,5 @@
 <html data-lt-installed="true" lang="en">
-<script>try {
-    Object.defineProperty(screen, "availTop", { value: 0 });
-  } catch (e) { }
-  try {
-    Object.defineProperty(screen, "availLeft", { value: 0 });
-  } catch (e) { }
-  try {
-    Object.defineProperty(screen, "availWidth", { value: 1366 });
-  } catch (e) { }
-  try {
-    Object.defineProperty(screen, "availHeight", { value: 768 });
-  } catch (e) { }
-  try {
-    Object.defineProperty(screen, "colorDepth", { value: 24 });
-  } catch (e) { }
-  try {
-    Object.defineProperty(screen, "pixelDepth", { value: 24 });
-  } catch (e) { }
-  try {
-    Object.defineProperty(navigator, "hardwareConcurrency", { value: 8 });
-  } catch (e) { }
-  try {
-    Object.defineProperty(navigator, "appVersion", { value: "5.0 (X11)" });
-  } catch (e) { }
-  try {
-    Object.defineProperty(navigator, "doNotTrack", { value: "unspecified" });
-  } catch (e) { }
-
+<script>
   try {
     window.screenY = 18
   } catch (e) { }
@@ -82,6 +55,9 @@
       </header>
       <h2 id="2021">2021</h2>
       <ul>
+        <li>Django for APIs by William S. Vincent</li>
+        <li>Django for Beginners by William S. Vincent</li>
+        <li>Explain the Cloud Like I'm 10 by Todd Hoff</li>
         <li>Shape Up: Stop Running in Circles and Ship Work that Matters by Basecamp</li>
         <li>Getting Real by Basecamp</li>
         <li>OReilly-Web-Application-Security-NGINX</li>
