--- a/reading-list.html
+++ b/reading-list.html
@@ -1,32 +1,5 @@
 <html data-lt-installed="true" lang="en">
-<script>try {
-    Object.defineProperty(screen, "availTop", { value: 0 });
-  } catch (e) { }
-  try {
-    Object.defineProperty(screen, "availLeft", { value: 0 });
-  } catch (e) { }
-  try {
-    Object.defineProperty(screen, "availWidth", { value: 1366 });
-  } catch (e) { }
-  try {
-    Object.defineProperty(screen, "availHeight", { value: 768 });
-  } catch (e) { }
-  try {
-    Object.defineProperty(screen, "colorDepth", { value: 24 });
-  } catch (e) { }
-  try {
-    Object.defineProperty(screen, "pixelDepth", { value: 24 });
-  } catch (e) { }
-  try {
-    Object.defineProperty(navigator, "hardwareConcurrency", { value: 8 });
-  } catch (e) { }
-  try {
-    Object.defineProperty(navigator, "appVersion", { value: "5.0 (X11)" });
-  } catch (e) { }
-  try {
-    Object.defineProperty(navigator, "doNotTrack", { value: "unspecified" });
-  } catch (e) { }
-
+<script>
   try {
     window.screenY = 18
   } catch (e) { }
@@ -83,6 +56,10 @@
       <p>For technical book check <a href="reading-list-technical.html">here</a></p>
       <h2 id="2021">2021</h2>
       <ul>
+        <li>Steal Like an Atrist by Austin Kleon</li>
+        <li>The Alchemist by Paulo Coelho</li>
+        <li>Stillness is the key by Ryan Holiday</li>
+        <li>The art of saying NO by Damon Zahariades</li>
         <li>Stillness is the key by Ryan Holiday</li>
         <li>The Total Money Makeover by Dave Ramsey</li>
         <li>Deep Work by Carl Newport</li>
